--- a/Issues/Epics/open/EPIC-0004-动态文档国际化体系.md
+++ b/Issues/Epics/open/EPIC-0004-动态文档国际化体系.md
@@ -2,15 +2,15 @@
 id: EPIC-0004
 type: epic
 status: open
-stage: todo
+stage: doing
 title: 动态文档国际化体系 (Dynamic Documentation I18n)
 created_at: 2026-01-12
 tags:
-  - i18n
-  - documentation
-  - agent-native
-progress: 0/3
-files_count: 0
+- i18n
+- documentation
+- agent-native
+progress: 6/6
+files_count: 5
 ---
 
 ## EPIC-0004: 动态文档国际化体系 (Dynamic Documentation I18n)
