fix: rename scope to @monoco-io and add build script to cli package

--- a/Issues/Features/closed/FEAT-0019-全局仪表盘.md
+++ b/Issues/Features/closed/FEAT-0019-全局仪表盘.md
@@ -44,7 +44,7 @@ tags: []
   - **实现方案**: 新增 `GET /api/v1/stats/dashboard`。
   - **Blocked 定义**: 暂定为 "存在未 Close 的前置依赖 (dependencies)" 的 Issue。
 - [x] **前端状态管理**: 重构前端状态管理 (Zustand)。
-  - **Store 设计**: 在 `@monoco/kanban-core` 中扩展或新增 Store，统一管理 Project Stats 与 Issues。
+  - **Store 设计**: 在 `@monoco-io/kanban-core` 中扩展或新增 Store，统一管理 Project Stats 与 Issues。
     - `useDashboardStore`: 管理聚合指标 (Stats) 和动态 (Activity)。
     - `useKanbanStore`: 继续管理 Issue 列表数据。
   - **数据同步**: 升级 `useKanbanSync` Hook。
