feat(issue): enforce explicit parent for Epics via Sink Root (FEAT-0106)

--- a/Issues/Epics/closed/EPIC-0002-智能任务内核与状态机.md
+++ b/Issues/Epics/closed/EPIC-0002-智能任务内核与状态机.md
@@ -15,6 +15,7 @@ related:
 - EPIC-0001
 domains: []
 tags:
+- '#EPIC-0000'
 - '#EPIC-0001'
 - '#EPIC-0002'
 - backend
@@ -23,6 +24,7 @@ tags:
 files: []
 progress: 12/12
 files_count: 0
+parent: EPIC-0000
 ---
 
 ## EPIC-0002: 智能任务内核与状态机 (Intelligent Task Kernel & State Machine)
