--- a/Issues/Epics/closed/EPIC-0003-可控外部知识摄入.md
+++ b/Issues/Epics/closed/EPIC-0003-可控外部知识摄入.md
@@ -12,6 +12,7 @@ dependencies: []
 related: []
 domains: []
 tags:
+- '#EPIC-0000'
 - '#EPIC-0003'
 - agent-native
 - knowledge
@@ -19,6 +20,7 @@ tags:
 progress: 1/1
 files_count: 0
 uid: 462e89
+parent: EPIC-0000
 ---
 
 ## EPIC-0003: 可控外部知识摄入 (Controlled Knowledge Ingestion)
