--- a/Issues/Epics/closed/EPIC-0004-动态文档国际化体系.md
+++ b/Issues/Epics/closed/EPIC-0004-动态文档国际化体系.md
@@ -13,12 +13,14 @@ dependencies: []
 related: []
 domains: []
 tags:
+- '#EPIC-0000'
 - '#EPIC-0004'
 - agent-native
 - documentation
 - i18n
 progress: 2/2
 files_count: 5
+parent: EPIC-0000
 ---
 
 ## EPIC-0004: 动态文档国际化体系 (Dynamic Documentation I18n)
