docs(issue): add review comments for CHORE-0047

--- a/Archaeology/REPORT_2026_01_26_01_30.md
+++ b/Archaeology/REPORT_2026_01_26_01_30.md
@@ -1,15 +1,15 @@
-# Monoco Toolkit 考古调查报告：从维护到革命 (2026-01-26 至 2026-01-30)
+# Monoco 考古调查报告：从维护到革命 (2026-01-26 至 2026-01-30)
 
 **日期**: 2026年2月1日
 **调查员**: Gemini CLI Agent
-**对象**: Monoco Toolkit Project
+**对象**: Monoco Project
 **范围**: 2026年1月26日 与 2026年1月30日 的代码与文档演进
 
 ---
 
 ## 1. 执行摘要 (Executive Summary)
 
-本次考古调查深入分析了 Monoco Toolkit 在 2026 年 1 月底的关键演进。调查发现，这段时间（特别是 1 月 30 日）标志着该项目从一个“任务管理工具”向“**Agent Native 操作系统**”的重大范式转移。
+本次考古调查深入分析了 Monoco 在 2026 年 1 月底的关键演进。调查发现，这段时间（特别是 1 月 30 日）标志着该项目从一个“任务管理工具”向“**Agent Native 操作系统**”的重大范式转移。
 
 - **1月26日（维护期）**：重点在于稳固基础。团队发布了多个补丁版本 (0.3.4, 0.3.5)，优化了 Issue 生命周期管理（FEAT-0108），并增强了跨项目引用能力（FEAT-0107）。这一天的活动表现为典型的工程维护和渐进式改进。
 - **1月30日（革命期）**：发生了架构级的重构。**FEAT-0118** 完全重写了 Agent CLI，引入了“角色（Role）- 会话（Session）”分离的运行模型。**FEAT-0121** 确立了 "Flow Skills" 标准，使用 Mermaid 图表作为可执行代码（Design as Code），实现了 Kimi CLI 与通用 Agent 的双重兼容。此外，Memo 系统（FEAT-0119）和治理系统（FEAT-0113/0115）也得到了核心增强。
@@ -54,7 +54,7 @@
 
 ## 4. 1月30日：Agent Native 革命 (The Agent Native Revolution)
 
-这一天是 Monoco Toolkit 发展史上的分水岭。代码提交密度极高，且涉及核心架构的根本性变更。
+这一天是 Monoco 发展史上的分水岭。代码提交密度极高，且涉及核心架构的根本性变更。
 
 ### 4.1 核心架构重构 (FEAT-0118: Role & Session)
 
@@ -164,7 +164,7 @@ class SessionManager:
 
 ## 6. 总结与展望 (Conclusion)
 
-从 1 月 26 日到 1 月 30 日，Monoco Toolkit 完成了一次惊人的蜕变。
+从 1 月 26 日到 1 月 30 日，Monoco 完成了一次惊人的蜕变。
 
 - **Before (1/26)**: 一个辅助开发者管理 Issue 的 CLI 工具。
 - **After (1/30)**: 一个 **Agent Native 操作系统**。它不仅管理任务，还管理**执行任务的数字员工 (Agents)**，并为它们定义了**标准作业程序 (SOP/Flows)**。
